EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Case/fields/hed__Category__c.field-meta.xml
<CustomField>
    <fullName>hed__Category__c</fullName>
    <description>The type of Case being tracked.</description>
    <inlineHelpText>El tipo de caso que se está siguiendo.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School Code of Conduct</fullName>
            </value>
            <value>
                <fullName>School Violation</fullName>
            </value>
            <value>
                <fullName>State Offense</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>