EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/Case/fields/hed__Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Occurrence_Date__c</fullName>
    <description>The date and time when the behavior event that triggered the Case occurred.</description>
    <inlineHelpText>La fecha y la hora donde el evento del comportamiento que desencadenó el caso tuvo lugar.</inlineHelpText>
    <label>Occurrence Date</label>
    <type>DateTime</type>
</CustomField>